comment fixes